--- a/index.html
+++ b/index.html
@@ -5,58 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="12">
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo link" href="./index.html">
+          Web<span class="logo-studio">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="nav-element link" href="">Studio</a></li>
+          <li>
+            <a class="nav-element link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li><a class="nav-element link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address list">
+          <li>
+            <a class="contact link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="button">Order Service</button>
       </section>
-      <section>
-        <h2>Ways to achieve success</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title" hidden>Ways to achieve success</h2>
+        <ul class="feature-list list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="sub-title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="sub-title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="sub-title">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="sub-title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -64,9 +83,9 @@
         </ul>
       </section>
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/section1/Rectangle_1.jpg"
@@ -90,50 +109,52 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="section team">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li class="card-item">
             <img
               src="./images/section2/img_1.jpg"
               alt="Foto Mark Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="sub-title">Mark Guerrero</h3>
+            <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="card-item">
             <img
               src="./images/section2/img_2.jpg"
               alt="Foto Tom Ford"
               width="264"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="sub-title">Tom Ford</h3>
+            <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="card-item">
             <img
               src="./images/section2/img_3.jpg"
               alt="Foto Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="sub-title">Camila Garcia</h3>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="card-item">
             <img
               src="./images/section2/img_4.jpg"
               alt="Foto Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="sub-title">Daniel Wilson</h3>
+            <p class="text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="logo link" href="./index.html">
+        Web<span class="footer-studio">Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
