--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
           Web<span class="logo-studio">Studio</span></a
         >
         <ul class="list">
-          <li><a class="nav-element link" href="">Studio</a></li>
+          <li><a class="nav-element link" href="./index.html">Studio</a></li>
           <li>
             <a class="nav-element link" href="./portfolio.html">Portfolio</a>
           </li>
           <li><a class="nav-element link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="address list">
           <li>
             <a class="contact link" href="mailto:info@devstudio.com"
