--- a/portfolio.html
+++ b/portfolio.html
@@ -21,11 +21,13 @@
         >
         <ul class="list">
           <li><a class="nav-element link" href="./index.html">Studio</a></li>
-          <li><a class="nav-element link" href="">Portfolio</a></li>
+          <li>
+            <a class="nav-element link" href="./portfolio.html">Portfolio</a>
+          </li>
           <li><a class="nav-element link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="address list">
           <li>
             <a class="contact link" href="mailto:info@devstudio.com"
@@ -42,7 +44,7 @@
     </header>
     <main>
       <section>
-        <h1>Work hidden</h1>
+        <h1 hidden>Work</h1>
         <ul class="list">
           <li><button type="button" class="btn">All</button></li>
           <li><button type="button" class="btn">Web Site</button></li>
